2010-09-13  Charlie Zender  <zender@uci.edu>

	* Implement nco_inq_var_packing() in ncks printing

	* Change metadata print format to be more Englishy

2010-09-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.4 release procedure:
 	Changes since nco-4_0_3: fxm
	cd ~/nco;cvs tag -d nco-4_0_4;cvs tag -d nco-4_0_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.4 release"
	cvs tag -c nco-4_0_4;cvs tag -c nco-4_0_4-1

	* Maintain input deflation level where identifiable (fixes TODO nco990)

	* Create test case to diagnose TODO nco990:
	ncks maintains input deflation level, other operators do not

	* Implement nco_sng_cnv_err() for strtol()-type calls, fixes TODO nco987

	* Use NCO_SNG_CNV_BASE10 instead of naked 10

2010-09-06  Charlie Zender  <zender@uci.edu>

	* Add chunking options to user-visible documentation

	* Add (finally) chunking infrastructure to all operators
	Exception is ncwa which does not yet use lmt_all_sct (why?)
	Capability not yet vetted, yet regression tests all pass

2010-09-03  Charlie Zender  <zender@uci.edu>

	* Remove SDO from most of homepage since name never stuck

2010-09-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.3 release procedure:
 	Changes since nco-4_0_2: nco_cnv_ccm_ccsm_cf_date() bug, ncbo bug, configure tweaks
	cd ~/nco;cvs tag -d nco-4_0_3;cvs tag -d nco-4_0_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.3 release"
	cvs tag -c nco-4_0_3;cvs tag -c nco-4_0_3-1

	* Document ncra date bug at http://nco.sf.net#bug_ncra_date

2010-09-01  Charlie Zender  <zender@uci.edu>

	* Belatedly removed nco_cal.[ch] (subsumed into nco_cln_utl.[ch])

	* Document UDUNITS_PATH and UDUNITS2_XML_PATH in nco.texi

2010-08-31  Charlie Zender  <zender@uci.edu>

	* Add protective #ifndef clauses to netCDF4 token definitions in nco_utl.hh
	#ifndef <TOKEN>; #define <TOKEN> in Makefile.old

	* Change conditions on compatibility token definitions from 
	#ifdef ENABLE_NETCDF4 to #ifndef <TOKEN>; #define <TOKEN> in Makefile.old